ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
spec:
  rules:
  - host: blue.web.com
    http:
      paths:
      - backend:
          serviceName: blue-service
          servicePort: 80
  - host: green.web.com
    http:
      paths:
      - backend:
          serviceName: green-service
          servicePort: 80
